minor changes to ver.: 0.9.0

--- a/src/public/allfours.html
+++ b/src/public/allfours.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <!--    Google Adsense script   -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-9132065189505644",
         enable_page_level_ads: true
     });
-    </script>
+    </script> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>ALL FOURS</title>
     <meta name="description" content="A card game indigenous to the country of Trinidad and Tobago. It is a pastime of Trinbagonians.">
@@ -29,14 +29,15 @@
                     <H1><span class="primary-text">TWO-MAN</span> All Fours</H1>
                 </div>
                 <div class="col-12">
-                    <nav id="navbar">                        
-                        <a href="#">Home</a>
+                    <p style="color: white">Game playable on latest version of Microsoft Edge only otherwise the game will not load.</p>
+                     <nav id="navbar">                        
+                    <!--    <a href="#">Home</a>
                         <a href="#">About</a>
                         <a href="#">Documentation</a>
                         <a href="#">Contact</a>
                         <!-- <a href="../public/lib/title-screen.html">Title Screen</a> -->
                         <!-- <a href="../public/lib/graphics.html">Graphics</a> -->
-                    </nav>
+                    </nav> 
                 </div>
             </div>
         </div>
