--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML>
 <HTML lang="en">
 <HEAD>
+    <!--    Google Adsense script   -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9132065189505644",
+        enable_page_level_ads: true
+    });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
