started the "message box"

--- a/src/public/allfours.html
+++ b/src/public/allfours.html
@@ -114,8 +114,8 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="closeCtrlPanel()">Close</button>
-                    <button class="w3-btn" onclick="Display.video(Game.Components.cutScenes[0])">Video</button>
-                    <button class="w3-btn" id="quitBtn" onclick="start()">Start</button>
+                    <button class="w3-btn" onclick="Display.video(Game.Components.cutScenes[0])">Beg</button>
+                    <button class="w3-btn" id="quitBtn" onclick="start()">Restart</button>
                 </div>
                 <div class="user_input">                    
                     <form>
